Milestone 1/my_MS0/Expr2.g4
grammar Expr2;
start_ : expr (';' expr)* EOF;
expr : atom 
    | ('+' | '-') expr 
    | expr '**' expr 
    | expr ('*' | '/') expr 
    | expr ('+' | '-') expr 
    | '(' expr ')' 
    | atom ;
atom : INT ;
INT : [0-9]+ ;
WS : [ \t\n\r]+ -> skip ;
